package ElloProtobufs;
import 'ello_protobufs/post.proto';

message ArtistInviteSubmission {
  required uint32 id = 1;
  required string title = 2;
  required string href = 3;
  required string author_username = 4;
  required uint64 created_at = 5;
  required uint64 updated_at = 6;
}
