package ElloProtobufs;
import 'ello_protobufs/user.proto';
import 'ello_protobufs/post.proto';
import 'ello_protobufs/category.proto';

message CategoryPost {
  required uint32 id = 1;
  required string status = 2;
  required Post post = 3;
  required Category category = 4;
  required User submitted_by = 5;
  required uint64 submitted_at = 6;
  optional User featured_by = 7;
  optional uint64 featured_at = 8;
  required uint64 created_at = 9;
  required uint64 updated_at = 10;
}
