package ElloProtobufs;
import 'ello_protobufs/user.proto';
import 'ello_protobufs/post.proto';

message Comment {
  required uint32 id = 1;
  required Post parent_post = 2;
  required string token = 3;
  required User author = 4;
  required uint64 created_at = 5;
  required uint64 updated_at = 6;
}
