package ElloProtobufs;
import 'ello_protobufs/user.proto';

message Post {
  required uint32 id = 1;
  required string token = 2;
  optional string href = 3;
  required User author = 4;
  required uint64 created_at = 5;
  required uint64 updated_at = 6;
  optional Post reposted_source = 7;
  optional Post reposted_via = 8;
}
